src/objects/ApprovalItem__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>数量</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GoukeinoneTax__c</fullName>
        <formula>Tankanonetax__c * Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$合計金額（税抜）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProductName__c</fullName>
        <label>商品名称（または券名称）</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RowNo__c</fullName>
        <label>RowNo.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ServiceRate__c</fullName>
        <label>サービス料(%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SpTotal__c</fullName>
        <label>#合計金額</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tankanonetax__c</fullName>
        <formula>/*if ( OR(ISNULL(TaxRate__c), TaxRate__c == 0), UnitPrice__c , CEILING(UnitPrice__c/(1 + TaxRate__c)) )*/ 
/* 
// 1:税込、サービス料抜き 
// 2:税込、サービス料込 
// 3:税抜、サービス料抜き 
// 4:税抜、サビース料込 
*/ 
/* 2014/08/06 EDIT 
Case ($Setup.CommDefine__c.UnitPriceDefKb__c , 
1, CEILING( UnitPrice__c / ( 1 + NULLVALUE (TaxRate__c, 0) ) ), 
2, CEILING( UnitPrice__c / ( (1 + NULLVALUE (TaxRate__c, 0) ) * ( 1 + NULLVALUE (ServiceRate__c, 0) ) ) ), 
3, UnitPrice__c , 
0) 
*/ 
/* 2015/10/15 EDIT 
Case ( 
VALUE( UnitPriceDefKbCal__c) , 
1, CEILING( UnitPrice__c * ( 1 + NULLVALUE (ServiceRate__c, 0) ) / ( 1 + NULLVALUE (TaxRate__c, 0) ) ), 
2, CEILING( UnitPrice__c / ( 1 + NULLVALUE (TaxRate__c, 0) ) ), 
3, CEILING( UnitPrice__c * ( 1 + NULLVALUE (ServiceRate__c, 0) ) ), 
0) 
*/ 
/* 2016/04/13 EDIT 
Case ( 
VALUE( UnitPriceDefKbCal__c) , 
1, CEILING( UnitPrice__c * ( 1 + NULLVALUE (ServiceRate__c, 0) ) / ( 1 + NULLVALUE (TaxRate__c, 0) ) ), 
2, CEILING( UnitPrice__c / ( 1 + NULLVALUE (TaxRate__c, 0) ) ), 
3, CEILING( UnitPrice__c * ( 1 + NULLVALUE (ServiceRate__c, 0) ) ), 
4, UnitPrice__c, 
0) 
*/ 
IF (NULLVALUE (TankawithoutTaxSys__c, 0) != 0, TankawithoutTaxSys__c, 

IF ( 
$Setup.CommDefine__c.AccountNoTaxCalFlg__c != true || 
$Setup.CommDefine__c.RoundType__c = 2, 
Case ( 
VALUE( UnitPriceDefKbCal__c ) , 
1, CEILING( UnitPrice__c * ( 1 + NULLVALUE (ServiceRate__c, 0) ) / ( 1 + NULLVALUE (TaxRate__c, 0) ) ), 
2, CEILING( UnitPrice__c / ( 1 + NULLVALUE (TaxRate__c, 0) ) ), 
3, CEILING( UnitPrice__c * ( 1 + NULLVALUE (ServiceRate__c, 0) ) ), 
4, CEILING( UnitPrice__c), 
0) 
, 
IF($Setup.CommDefine__c.RoundType__c = 0, 
Case ( 
VALUE( UnitPriceDefKbCal__c ) , 
1, FLOOR( UnitPrice__c * ( 1 + NULLVALUE (ServiceRate__c, 0) ) / ( 1 + NULLVALUE (TaxRate__c, 0) ) ), 
2, FLOOR( UnitPrice__c / ( 1 + NULLVALUE (TaxRate__c, 0) ) ), 
3, FLOOR( UnitPrice__c * ( 1 + NULLVALUE (ServiceRate__c, 0) ) ), 
4, FLOOR( UnitPrice__c ), 
0) 
, 
Case ( 
VALUE( UnitPriceDefKbCal__c ) , 
1, ROUND( UnitPrice__c * ( 1 + NULLVALUE (ServiceRate__c, 0) ) / ( 1 + NULLVALUE (TaxRate__c, 0) ) , 0), 
2, ROUND( UnitPrice__c / ( 1 + NULLVALUE (TaxRate__c, 0) ) , 0), 
3, ROUND( UnitPrice__c * ( 1 + NULLVALUE (ServiceRate__c, 0) ) , 0), 
4, ROUND( UnitPrice__c , 0), 
0) 
) 
) 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$単価(税抜)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TankawithoutTaxSys__c</fullName>
        <inlineHelpText>画面、レポートなど使わない、システム内部利用項目</inlineHelpText>
        <label>単価(税抜)（システム用）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaxRate__c</fullName>
        <label>消費税</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>UnitPriceDefKbCal__c</fullName>
        <formula>UnitPriceDefKb__c</formula>
        <label>$会計商品単価定義区分</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitPriceDefKb__c</fullName>
        <defaultValue>TEXT($Setup.CommDefine__c.UnitPriceDefKb__c)</defaultValue>
        <label>会計商品単価定義区分</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitPriceTax__c</fullName>
        <label>単価(税込)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <label>単価</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>refAccountMaster__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>商品名</label>
        <referenceTo>AccountMaster__c</referenceTo>
        <relationshipLabel>稟議明細</relationshipLabel>
        <relationshipName>refAccountMasternsYV</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>refApproval__c</fullName>
        <label>稟議</label>
        <referenceTo>Approvaldocuments__c</referenceTo>
        <relationshipLabel>稟議明細</relationshipLabel>
        <relationshipName>refApprovalQEE7</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>稟議明細</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>稟議明細#</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>